[gd_scene load_steps=8 format=3 uid="uid://bmpt3aib2l53i"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_kkc12"]
[ext_resource type="AudioStream" uid="uid://chs02bsgch7c2" path="res://sound-effects/Jump.mp3" id="2_udocq"]
[ext_resource type="AudioStream" uid="uid://iqhlfs305a4f" path="res://sound-effects/LeftMovement.mp3" id="3_80n2v"]
[ext_resource type="AudioStream" uid="uid://d23b2rpk04kvo" path="res://sound-effects/RightMovement.mp3" id="4_a4g7u"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oeaee"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_slnhb"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gqmi7"]
height = 1.48202
radius = 0.645286

[node name="player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_kkc12")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_oeaee")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_slnhb")

[node name="JumpButton" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_udocq")

[node name="LeftButton" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_80n2v")

[node name="RightButton" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_a4g7u")

[node name="DeathSense" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeathSense"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.450263, 0)
shape = SubResource("CylinderShape3D_gqmi7")

[connection signal="body_entered" from="DeathSense" to="." method="_on_death_sense_body_entered"]
